; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/sh/boards/mach-se/7724/extr_irq.c_enable_se7724_irq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/sh/boards/mach-se/7724/extr_irq.c_enable_se7724_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fpga_irq = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @enable_se7724_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @enable_se7724_irq(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.fpga_irq, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @fpga2irq(i32 %5)
  %7 = call i64 @get_fpga_irq(i32 %6)
  %8 = bitcast %struct.fpga_irq* %3 to i64*
  store i64 %7, i64* %8, align 4
  %9 = load i32, i32* %2, align 4
  %10 = getelementptr inbounds %struct.fpga_irq, %struct.fpga_irq* %3, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = sub i32 %9, %11
  store i32 %12, i32* %4, align 4
  %13 = getelementptr inbounds %struct.fpga_irq, %struct.fpga_irq* %3, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @ctrl_inw(i32 %14)
  %16 = load i32, i32* %4, align 4
  %17 = shl i32 1, %16
  %18 = xor i32 %17, -1
  %19 = and i32 %15, %18
  %20 = getelementptr inbounds %struct.fpga_irq, %struct.fpga_irq* %3, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @ctrl_outw(i32 %19, i32 %21)
  ret void
}

declare dso_local i64 @get_fpga_irq(i32) #1

declare dso_local i32 @fpga2irq(i32) #1

declare dso_local i32 @ctrl_outw(i32, i32) #1

declare dso_local i32 @ctrl_inw(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
